--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -5,7 +5,7 @@ PIL
 lxml
 
 OWSLib==0.4.0
-Django==1.4
+Django==1.4.2
 django-extensions==0.8
 httplib2==0.7.4
 psycopg2==2.4.1
@@ -27,7 +27,7 @@ ordereddict
 geojson
 https://bitbucket.org/jespern/django-piston/get/5b3ef294fe89.zip
 #Uncomment the following to use the django debug toolbar
--e git+https://github.com/robhudson/django-debug-toolbar.git#egg=django-debug-toolbar
+#-e git+https://github.com/robhudson/django-debug-toolbar.git#egg=django-debug-toolbar
 boto
 #For scheduled tasks
 django-celery
@@ -41,3 +41,5 @@ jdcal
 vectorformats
 #For autocomplete
 django-autocomplete-light
+#For model translation
+-e git+https://github.com/deschler/django-modeltranslation.git#egg=django-modeltranslation
