--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -1,10 +1,14 @@
 --extra-index-url=http://dist.pinaxproject.com/dev
 
+
+#ArcGIS REST service support
+-e git+https://github.com/Esri/arcpy-server-util-rest.git@hg/default#egg=arcpy-server-util-rest
+
 # Extensions with C components
 PIL
 lxml
 
-OWSLib
+-e git+https://github.com/geopython/OWSLib.git#egg=owslib
 Django==1.4
 django-extensions==0.8
 httplib2==0.7.4
@@ -46,3 +50,4 @@ vectorformats
 django-autocomplete-light==1.4.5
 #For slugifying
 unidecode
+
