Add build files

--- a/dev/build.ini
+++ b/dev/build.ini
@@ -1,8 +1,8 @@
 [geoserver]
-gs_data_url=http://worldmap.harvard.edu/media/geoserver/geonode-geoserver-data.zip
+gs_data_url=http://geonode.harvard.edu/media/geoserver/geonode-geoserver-data.zip
 
 [geonetwork]
 geonetwork_zip=geonetwork.war
-geonetwork_war_url=http://worldmap.harvard.edu/media/geoserver/
-intermap_war_url=http://worldmap.harvard.edu/media/geoserver/intermap.war
+geonetwork_war_url=http://geonode.harvard.edu/media/geoserver/
+intermap_war_url=http://geonode.harvard.edu/media/geoserver/intermap.war
 
