--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "geonode-suite-sdk"]
-	path = geonode-suite-sdk
+[submodule "worldmap-client"]
+	path = worldmap-client
 	url = git://github.com/mbertrand/geonode-suite-sdk.git
