Update gs-data location

--- a/src/geoserver-geonode-ext/pom.xml
+++ b/src/geoserver-geonode-ext/pom.xml
@@ -313,7 +313,7 @@
           <systemProperties>
             <systemProperty>
               <name>GEOSERVER_DATA_DIR</name>
-              <value>../../gs-data/</value>
+              <value>../../webapps/gs-data/</value>
             </systemProperty>
           </systemProperties>
 
@@ -343,7 +343,22 @@
         </executions>
       </plugin>
 
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <warName>geoserver</warName>
+          <webappDirectory>${project.build.directory}/geoserver</webappDirectory> -->
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>war</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
