Use new ArcRestLayerPanel

--- a/src/geonode-client/buildjs.cfg
+++ b/src/geonode-client/buildjs.cfg
@@ -219,6 +219,7 @@ include =
     plugins/StreetViewTool.js
     widgets/ClassificationPanel.js
     plugins/StamenSource.js
+    widgets/ArcRestLayerPanel.js
 
 exclude =
     loader.js
