Fix some issues with Chinese language

--- a/src/geonode-client/buildjs.cfg
+++ b/src/geonode-client/buildjs.cfg
@@ -198,6 +198,7 @@ include =
     menu/LayerMenu.js
     locale/es.js
     locale/fr.js
+    locale/zh_CN.js
     plugins/AddCategory.js
     plugins/RenameCategory.js
     plugins/RemoveCategory.js
